# contentflow

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
contentflow/: __init__.py  calendar.py  generator.py  seo.py
tests/: test_basic.py
