[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contentflow"
version = "0.4.0"
description = "AI Marketing Content Generator"
readme = "README.md"
authors = [
    { name = "Teyfik OZ", email = "teyfikoz@yahoo.com" }
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["marketing", "content", "ai", "copywriting", "travel"]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/teyfikoz/contentflow"
Repository = "https://github.com/teyfikoz/contentflow"
Issues = "https://github.com/teyfikoz/contentflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["contentflow*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
